--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJS Starter Project",
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
@@ -12,22 +12,33 @@
     "type": "git",
     "url": "git+https://github.com/madeindra/nodejs-starter.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "nodejs",
+    "rest",
+    "api",
+    "starter",
+    "template"
+  ],
+  "author": "madeindra",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/madeindra/nodejs-starter/issues"
   },
   "homepage": "https://github.com/madeindra/nodejs-starter#readme",
   "devDependencies": {
-    "eslint": "^8.21.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
+    "pino-http": "^8.2.0"
   }
 }
