--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
+    "mongodb": "^4.8.1",
     "multer": "^1.4.5-lts.1",
     "pino-http": "^8.2.0"
   }
