--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "helmet": "^5.1.1",
     "mongodb": "^4.8.1",
     "multer": "^1.4.5-lts.1",
+    "pino": "^8.4.0",
     "pino-http": "^8.2.0"
   }
 }
