replace source with typescript

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV=production
 PORT=8000
-MONGO_URI=mongodb+srv://username:password@localhost
+MONGO_URI=mongodb://localhost:27017
 MONGO_DATABASE=database
