--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "nodejs-starter",
   "version": "1.0.0",
   "description": "NodeJS Starter Project",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "test": "jest"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "fix": "eslint . --ext .ts --fix"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts",
+    "ignore": [
+      "dist",
+      "node_modules"
+    ],
+    "exec": "ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -25,14 +39,6 @@
     "url": "https://github.com/madeindra/nodejs-starter/issues"
   },
   "homepage": "https://github.com/madeindra/nodejs-starter#readme",
-  "devDependencies": {
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "jest": "^28.1.3",
-    "nodemon": "^2.0.19",
-    "supertest": "^6.2.4"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -40,7 +46,23 @@
     "helmet": "^5.1.1",
     "mongodb": "^4.8.1",
     "multer": "^1.4.5-lts.1",
-    "pino": "^8.4.0",
-    "pino-http": "^8.2.0"
+    "pino-http": "^8.2.0",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.7.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
